src/logs/error.log
[2022-09-02T18:14:27.444] [ERROR] error - C:\Users\marti\Documents\CoderHouse\Final Backend Coderhouse\src\app\DAO\products\mongoDB.js:68
        { precio: { $gte: filters.precioMin, $lte: filters.precioMax } },
        ^

SyntaxError: Unexpected token '{'
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Function.getPersistencia (C:\Users\marti\Documents\CoderHouse\Final Backend Coderhouse\src\app\DAO\DAOFactory.js:6:28)
    at new ProductController (C:\Users\marti\Documents\CoderHouse\Final Backend Coderhouse\src\app\controllers\products.js:7:38)
